--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Laundry Status</title>
     <link rel="stylesheet" href="styles.css" />
+    <base href="/web/" />
   </head>
   <body>
     <div class="page">
