--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Laundry Status</title>
-    <link rel="stylesheet" href="styles.css" />
-    <base href="/web/" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="page">
@@ -26,6 +25,6 @@
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
   </body>
 </html>
